评论系统页10%

--- a/aboutWebsite/webDevelopment/commentSystems/commentSystems.html
+++ b/aboutWebsite/webDevelopment/commentSystems/commentSystems.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../../../wholeSite/icon.png" type="image/x-icon">
     <title>SoraPage-评论系统</title>
+    <link type="text/css" rel="stylesheet" href="../../../wholeSite/fixedHeader.css" />
+    <link type="text/css" rel="stylesheet" href="../../../wholeSite/stripesLayout.css" />
 </head>
+
 <body>
-    
+    <header>
+        <span id="headerWebname" style="margin-top: 0;">
+            <a href="../../../homepage/homepage.html">SoraPage</a>
+        </span>
+        <div id="headerTitle">评论系统</div>
+    </header>
+
+    <div id="allContents">
+        <div id="passage">
+
+            <div class="backgroundColor_gray">
+                <h1 style="text-align: center;">第三方评论系统踩坑录</h1>
+                <h4 style="text-align: center;">最后更新：2020年1月30日16:13</h4>
+                <p>网站毫无疑问是需要评论系统的，但对于我这种只会一点点HTML和CSS的家伙来说，自己写是不可能的事情。于是就得借助第三方，前前后后试了4家，Disqus、来必力、畅言、Valine。最后决定先用着Valine。这里简单谈谈各个评论系统的优劣以及重点说说Valine的设置方法。
+                </p>
+            </div>
+
+            <div class="background_white">
+                <h4></h4>
+            </div>
+        </div>
+    </div>
+
+    </div>
+
 </body>
+
 </html>
