教程目录页Ver-2.1 增加文章简介

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -58,12 +58,12 @@
                     </div>
                     <div class="sortCatalog">
                         <ul>
-                            <li><a href="">关于Sora和SoraPage (施工中...)</a></li>
-                            <li><a href="../aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
                             <li id="commentArea">
                                 <img src="comment.svg" width="7%">
                                 <a href="../aboutWebsite/commentArea/commentArea.html">留言板</a>
                             </li>
+                            <li><a href="../aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
+                            <li><a href="../aboutWebsite/webDevelopment/webhook/webhook.html">WebHook设置方法</a></li>
                         </ul>
                     </div>
                 </div>
