--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -45,6 +45,11 @@
                 <div class="content">
                     <h1>SSR使用教程</h1>
                     <img src="SSR/SSRimg.png" width="40%" height="30%" alt="SSR图标">
+                    <div class="dividingLine"></div>
+                    <div class="introduction">
+                        <p>SSR是一种科学上网方式，其开发目的就是为了突破封锁，因此在穿透能力和稳定性上是要优于大部分同类工具的。再加上搭建成本较低，目前而言算是科学上网的理想方法。</p>
+                        <p>但是SSR入门门槛略高，其APP和PC客户端有一些专业术语较为晦涩，另一方面找到优质的SSR服务提供商也稍有难度。如果你对这种技术有兴趣的话，这篇文章或许能提供些许帮助。</p>
+                    </div>
                 </div>
             </a>
         </div>
@@ -53,7 +58,16 @@
             <a href="OneNote/OneNote.html">
                 <div class="content">
                     <h1>OneNote调教方法</h1>
-                    <img src="OneNote/OneNoteIcon.jpg" width="40%" height="30%" alt="OneNote图标">
+                    <img src="OneNote/OneNoteIcon.jpg" width="40%" height="30%" alt="OneNote图标" style="margin-top: 1%;">
+                    <div class="dividingLine"></div>
+                    <div class="introduction">
+                        <p>OneNote是微软office全家桶中用来做笔记的一款软件，由于其灵活的布局、简约但实用的笔记分类方式，再加上有着和Word一样强大的功能区，目前成为了我PC端主力笔记工具。</p>
+                        <p>虽然OneNote很香，但bug和一些必要的功能缺失让人用起来很别扭。因此，介绍两个改善使用体验的小插件。</p>
+                        <ul style="margin-inline-start: 1rem;">
+                            <li><strong>Onetastic</strong>：增加宏操作，用于解决OneNote中英文字体不统一的bug</li>
+                            <li><strong>NoteHighlight2016</strong>：代码高亮效果</li>
+                        </ul>
+                    </div>
                 </div>
             </a>
         </div>
