homepage Ver-2.1 列表前改用图标提示

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>SoraPage-HomePage</title>
     <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="homepage.css" media="screen and (min-device-width: 701px)" />
-    <link type="text/css" rel="stylesheet" href="homepageM.css" media="screen and (max-device-width: 700px)" />
+    <link type="text/css" rel="stylesheet" href="homepage.css?time=2020.1.30" media="screen and (min-device-width: 701px)" />
+    <link type="text/css" rel="stylesheet" href="homepageM.css?time=2020.1.30" media="screen and (max-device-width: 700px)" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
-        alert("PC端食用效果更佳~\n欢迎大家到留言板和教程下方评论区留言~");
+        //alert("PC端食用效果更佳~\n欢迎大家到留言板和教程下方评论区留言~");
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -28,14 +28,23 @@
 
                 <div class="sortInfo">
                     <div class="updateInfo">
-                        <div class="lastUpdate">最近更新：2020.1.26</div>
-                        <div class="updateContent">更新内容：增加OneNote教程</div>
+                        <div class="lastUpdate">最近更新：2020.1.30</div>
+                        <div class="updateContent">更新内容：目录页增加文章简介</div>
                     </div>
                     <div class="sortCatalog">
                         <ul>
-                            <li><a href="../tutorial/tutorialCatalog.html">目录页</a></li>
-                            <li><a href="../tutorial/SSR/SSR.html">SSR使用教程</a></li>
-                            <li><a href="../tutorial/OneNote/OneNote.html">OneNote调教方法</a></li>
+                            <li>
+                                <img src="catalog.svg" width="6%">
+                                <a href="../tutorial/tutorialCatalog.html">目录页</a>
+                            </li>
+                            <li>
+                                <img src="passage.svg" width="6%">
+                                <a href="../tutorial/SSR/SSR.html">SSR使用教程</a>
+                            </li>
+                            <li>
+                                <img src="passage.svg" width="6%">
+                                <a href="../tutorial/OneNote/OneNote.html">OneNote调教方法</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -53,17 +62,23 @@
 
                 <div class="sortInfo">
                     <div class="updateInfo">
-                        <div class="lastUpdate">最近更新：2020.1.28</div>
-                        <div class="updateContent">更新内容：开发日志上线</div>
+                        <div class="lastUpdate">最近更新：2020.1.30</div>
+                        <div class="updateContent">更新内容：新增“WebHook设置方法”</div>
                     </div>
                     <div class="sortCatalog">
                         <ul>
-                            <li id="commentArea">
-                                <img src="comment.svg" width="7%">
+                            <li>
+                                <img src="comment.svg" width="6%">
                                 <a href="../aboutWebsite/commentArea/commentArea.html">留言板</a>
                             </li>
-                            <li><a href="../aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
-                            <li><a href="../aboutWebsite/webDevelopment/webhook/webhook.html">WebHook设置方法</a></li>
+                            <li>
+                                <img src="log.svg" width="6%">
+                                <a href="../aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a>
+                            </li>
+                            <li>
+                                <img src="passage.svg" width="6%">
+                                <a href="../aboutWebsite/webDevelopment/webhook/webhook.html">WebHook设置方法</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
