--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -6,7 +6,7 @@
     <title>SoraPage-教程</title>
     <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../wholeSite/fixedHeader.css" />
-    <link type="text/css" rel="stylesheet" href="tutorialCatalog.css" />
+    <link type="text/css" rel="stylesheet" href="tutorialCatalog.css?time=2020.1.30" />
     <style>
         #background {
             position: fixed;
