--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -55,7 +55,7 @@
                         </li>
                         <li>
                             <h1>2020.01.28</h1>
-                            <p>Homepage、开发日志页、吐槽区上线</p>
+                            <p>Homepage、开发日志页、留言板上线</p>
                         </li>
                         <li>
                             <h1>2020.01.29</h1>
