词典教程Ver-1.0 及一些其他页面细微改动

--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -44,7 +44,7 @@
             <a href="SSR/SSR.html">
                 <div class="content">
                     <h1>SSR使用教程</h1>
-                    <img src="SSR/SSRimg.png" width="40%" height="30%" alt="SSR图标">
+                    <img src="SSR/SSRimg.png" width="40%" height="30%" alt="SSR图标" style="margin-top: 1%;">
                     <div class="dividingLine"></div>
                     <div class="introduction">
                         <p>SSR是一种科学上网方式，其开发目的就是为了突破封锁，因此在穿透能力和稳定性上是要优于大部分同类工具的。再加上搭建成本较低，目前而言算是科学上网的理想方法。</p>
@@ -66,6 +66,23 @@
                         <ul style="margin-inline-start: 1rem;">
                             <li><strong>Onetastic</strong>：增加宏操作，用于解决OneNote中英文字体不统一的bug</li>
                             <li><strong>NoteHighlight2016</strong>：代码高亮效果</li>
+                        </ul>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="contentBorder">
+            <a href="./dictionary/dictionary.html">
+                <div class="content">
+                    <h1>安利两个词典APP</h1>
+                    <img src="./dictionary/icon.png" width="40%" alt="字典APP图标" style="margin-top: 1%;">
+                    <div class="dividingLine" style="margin-top: 0;"></div>
+                    <div class="introduction">
+                        <p>最近准备托福和N2，两个顺手的词典工具还是很有用处的，一个英语词典，一个日语词典，使用起来感觉很不错。</p>
+                        <ul style="margin-inline-start: 1rem;">
+                            <li><strong>欧路词典</strong>：英语词典，支持mdx格式的外部词典文件，也就说可以把纯正的牛津高阶和朗文词典装进去。另外这个APP也可以拿来背单词，托福雅思六级利器。</li>
+                            <li><strong>MOJI辞书</strong>：日语词典，界面简洁，词条明了，能用来背日语单词，来自众多日语老师的安利。</li>
                         </ul>
                     </div>
                 </div>
