--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -9,7 +9,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
-        //alert("PC端食用效果更佳~\n欢迎大家到留言板和教程下方评论区留言~");
+        alert("PC端食用效果更佳~\n欢迎大家到留言板和教程下方评论区留言~");
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -28,8 +28,8 @@
 
                 <div class="sortInfo">
                     <div class="updateInfo">
-                        <div class="lastUpdate">最近更新：2020.1.30</div>
-                        <div class="updateContent">更新内容：目录页增加文章简介</div>
+                        <div class="lastUpdate">最近更新：2020.1.31</div>
+                        <div class="updateContent">更新内容：新增文章“安利两个字典APP”</div>
                     </div>
                     <div class="sortCatalog">
                         <ul>
@@ -43,7 +43,7 @@
                             </li>
                             <li>
                                 <img src="passage.svg" width="6%">
-                                <a href="../tutorial/OneNote/OneNote.html">OneNote调教方法</a>
+                                <a href="../tutorial/dictionary/dictionary.html">安利两个字典APP</a>
                             </li>
                         </ul>
                     </div>
