字典教程Ver-1.1 图片过宽修复

--- a/tutorial/dictionary/dictionary.html
+++ b/tutorial/dictionary/dictionary.html
@@ -90,8 +90,8 @@
                         <li>
                             <p>完成！也很简单(图1为iPhone，图2为iPad)</p>
                             <div style="text-align: center;">
-                                <img src="ouluIos_2.PNG" style="height: 90vh;">
-                                <img src="ouluIos_3.JPG" style="height: 90vh; margin-left: 5%;">
+                                <img src="ouluIos_2.PNG" style="height: 70vmin;">
+                                <img src="ouluIos_3.JPG" style="height: 70vmin;">
                             </div>
                         </li>
                     </ol>
