移动端CSS适配

--- a/aboutWebsite/webDevelopment/webhook/webhook.html
+++ b/aboutWebsite/webDevelopment/webhook/webhook.html
@@ -41,13 +41,13 @@
     <div id="allContents">
         <div id="passage">
 
-            <div class="backgroundColor_gray">
+            <div class="background_gray">
                 <h1 style="text-align: center;">宝塔面板WebHook设置</h1>
                 <h4 style="text-align: center;">最后更新：2020年1月30日16:13</h4>
                 <p>通过webhook可以实现往github进行push操作时，在设置了webhook的服务器上就能自动拉取最新的代码，省去了再次部署的麻烦。webhook的原理大同小异，不仅仅局限于宝塔面板。</p>
             </div>
 
-            <div class="backgroundColor_white">
+            <div class="background_white">
                 <h2>宝塔面板添加webhook</h2>
                 <ol>
                     <li>
@@ -98,7 +98,7 @@ fi
                 </ol>
             </div>
 
-            <div class="backgroundColor_gray">
+            <div class="background_gray">
                 <h2>GitHub添加webhook</h2>
                 <ol>
                     <li>
