--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoraPage-SSR教程</title>
     <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css" />
@@ -229,8 +230,12 @@
                     但是前提是得有个非中国的苹果账号，这玩意还不是很好搞。不过如何注册日本或者美国地区的苹果账号的教程，百度上一抓一大把，啥时候有空了，说不定自己也会写（有生之年+2）。
                     反正我只记得我注册日区账号时，电话和住址填的是右下图中秋叶原的柚子社商店（滑稽）。
                 </p>
-                <img src="ios_1.jpg" width="30%" class="iosImg" alt="App Store中Shadowrocket页面">
-                <img src="ios_2.jpg" width="30%" class="iosImg" alt="Google Maps中柚子商店的地址">
+                <table>
+                    <tr>
+                        <td><img src="ios_1.jpg" width="100%" class="iosImg" alt="App Store中Shadowrocket页面"></td>
+                        <td><img src="ios_2.jpg" width="100%" class="iosImg" alt="Google Maps中柚子商店的地址"></td>
+                    </tr>
+                </table>
                 <p>千辛万苦注册好苹果账号后，你还得氪金买这个APP，貌似是3美金，所以你还得往你的苹果账号里充钱，首先你得有张master或者visa的信用卡。</p>
                 <p>这些本来都是些很麻烦的操作，直到万能的淘宝出现了。不论是苹果账号还是充钱，有钱能使鬼推磨，你都能在淘宝上享受一条龙服务。买号大概5RMB,买礼品卡充钱最少好像是5美金起卖，总成本就是40左右。（我美区账号淘宝买的，日区账号自己注册的，也不是那么麻烦）
                 </p>
@@ -240,8 +245,13 @@
                 <ol>
                     <li><strong>添加订阅</strong>：进入APP后点击右上角的+号，在类型里选subscribe，URL就是机场给的订阅链接，备注也是可以随意填，填完后右上角完成即可。</li>
                     <div class="centralImg"><img src="ios_3.PNG" width="40%" alt="Shadowrocket首页"></div>
-                    <img src="ios_4.PNG" width="30%" class="iosImg" alt="Shadowrocket添加节点页面">
-                    <img src="ios_5.PNG" width="30%" class="iosImg" alt="Shadowrocket节点类型页面">
+                    <table>
+                        <tr>
+                            <td><img src="ios_4.PNG" width="100%" class="iosImg" alt="Shadowrocket添加节点页面"></td>
+                            <td><img src="ios_5.PNG" width="100%" class="iosImg" alt="Shadowrocket节点类型页面"></td>
+                        </tr>
+                    </table>
+
                     <li><strong>更新订阅</strong>：添加订阅后，点一下每个订阅下的第一个节点（准确来说那并不是节点）可以缩放整个订阅列表。点它右边那个标志，可以编辑订阅的设置，更新订阅只需要在这个页面点右上角的完成就OK了。
                     </li>
                     <li><strong>设置代理模式</strong>：在首页的全局路由，原理和Windows一样</li>
