--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -28,6 +28,11 @@
             #backgroundM {
                 display: none;
             }
+
+            #allContents {
+                margin: 60px 10% 0 10%;
+                padding: 1% 20px 0 20px;
+            }
         }
 
         @media screen and (max-device-width: 700px) {
@@ -38,18 +43,21 @@
             #backgroundM img {
                 position: fixed;
                 z-index: -2;
-                top: 42px;
+                top: 30px;
                 left: 0;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 opacity: 0.9;
             }
+
+            #allContents {
+                margin: 45px 5% 0 5%;
+                padding: 1% 20px 0 20px;
+            }
         }
 
-        #allContent {
-            margin: 60px 10% 0 10%;
-            padding: 1% 20px 0 20px;
+        #allContents {
             background-color: rgba(240, 240, 240, 0.7);
             border-radius: 25px;
             line-height: 2;
@@ -76,7 +84,7 @@
     <div id="background"><img src="CAbackground.png"></div>
     <div id="backgroundM"><img src="CAbackgroundM.png"></div>
 
-    <div id="allContent">
+    <div id="allContents">
         <div id="comments">
             <p>欢迎大噶来到SoraPage御用留言板，目前由于处于内测阶段，估计也没啥不认识的小伙伴会戳进来...</p>
             <p>由于自己菜鸡的本质，写不出原生的评论系统，只能接入第三方，第三方的评论系统是真的难找哇，要么就是国内被墙，要么就是非要评论者注册。历经千辛万苦，终于找到了这家符合要求的（落泪）。</p>
