--- a/tutorial/OneNote/OneNote.html
+++ b/tutorial/OneNote/OneNote.html
@@ -6,8 +6,12 @@
     <title>SoraPage-OneNote</title>
     <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css" />
-    <link type="text/css" rel="stylesheet" href="../tutorial.css" />
-    <link type="text/css" rel="stylesheet" href="OneNote.css" />
+    <link type="text/css" rel="stylesheet" href="../../wholeSite/tutorialLayout.css" />
+    <style>
+        img {
+            margin-top: 1%;
+        }
+    </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
@@ -30,9 +34,8 @@
     <div id="allContent">
 
         <div class="centralImg">
-            <img src="OneNoteIcon.jpg" width="40%" alt="OneNote的图标">
+            <img src="OneNoteIcon.jpg" width="40%" alt="OneNote的图标" id="icon">
             <h2>最后更新：2020年1月26日18:38</h2>
-            <h2>更新内容：全篇完成</h2>
         </div>
 
         <div class="line"></div>
