--- a/tutorial/dictionary/dictionary.html
+++ b/tutorial/dictionary/dictionary.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css">
-    <link type="text/css" rel="stylesheet" href="../tutorial.css">
+    <link type="text/css" rel="stylesheet" href="../../wholeSite/tutorialLayout.css">
     <title>SoraPage</title>
     <style>
         ul {
@@ -33,7 +33,7 @@
     <div id="allContents">
         <div id="passage">
             <div id="passageTitle" style="text-align: center;">
-                <img src="icon.png" width="30%">
+                <img src="icon.png" width="30%" id="icon">
                 <h2>最后更新：2020.1.31</h2>
             </div>
             <div class="dividingLine"></div>
