--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -6,8 +6,49 @@
     <title>SoraPage-教程</title>
     <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../wholeSite/fixedHeader.css" />
-    <link type="text/css" rel="stylesheet" href="tutorialCatalog.css?time=2020.1.30" />
     <style>
+        .contentBorder {
+            margin: 2% 10% 2% 10%;
+            padding: 1px;
+            border-radius: 25px;
+            background-color: rgba(230, 230, 230, 0.4);
+        }
+
+        .content {
+            margin: 14px;
+            padding: 1%;
+            border-radius: 25px;
+            background-color: rgba(245, 245, 245, 0.4);
+            text-align: center;
+        }
+
+        .contentBorder:hover {
+            background-color: rgba(220, 220, 220, 0.7);
+        }
+
+        .content:hover {
+            background-color: rgba(240, 240, 240, 0.7);
+        }
+
+        #allContent {
+            margin: 60px;
+            color: #1e1e1e;
+            line-height: 1.7rem;
+        }
+
+        .dividingLine {
+            height: 1px;
+            margin: 1% 5% 1% 5%;
+            border-bottom-style: dashed;
+            border-color: white;
+        }
+
+        .introduction {
+            margin: 1% 5% 1% 5%;
+            font-size: 1.1rem;
+            text-align: start;
+        }
+
         #background {
             position: fixed;
             z-index: -2;
@@ -81,7 +122,8 @@
                     <div class="introduction">
                         <p>最近准备托福和N2，两个顺手的词典工具还是很有用处的，一个英语词典，一个日语词典，使用起来感觉很不错。</p>
                         <ul style="margin-inline-start: 1rem;">
-                            <li><strong>欧路词典</strong>：英语词典，支持mdx格式的外部词典文件，也就说可以把纯正的牛津高阶和朗文词典装进去。另外这个APP也可以拿来背单词，托福雅思六级利器。</li>
+                            <li><strong>欧路词典</strong>：英语词典，支持mdx格式的外部词典文件，也就说可以把纯正的牛津高阶和朗文词典装进去。另外这个APP也可以拿来背单词，托福雅思六级利器。
+                            </li>
                             <li><strong>MOJI辞书</strong>：日语词典，界面简洁，词条明了，能用来背日语单词，来自众多日语老师的安利。</li>
                         </ul>
                     </div>
