--- a/aboutWebsite/skillTree/commentSystems/commentSystems.html
+++ b/aboutWebsite/skillTree/commentSystems/commentSystems.html
@@ -7,6 +7,8 @@
     <title>SoraPage-评论系统</title>
     <link type="text/css" rel="stylesheet" href="../../../wholeSite/fixedHeader.css" />
     <link type="text/css" rel="stylesheet" href="../../../wholeSite/stripesLayout.css" />
+    <link type="text/css" rel="stylesheet" href="../../../wholeSite/prism.css" />
+    <script src="../../../wholeSite/prism.js"></script>
     <style>
         #comparison table {
             margin-bottom: 1%;
@@ -57,7 +59,7 @@
 
             <article class="background_gray" id="preface">
                 <h1 style="text-align: center;">第三方评论系统血泪史</h1>
-                <h3 style="text-align: center;">最后更新：2020年2月9日17:46</h3>
+                <h3 style="text-align: center;">最后更新：2020年2月10日18:35</h3>
                 <p>网站毫无疑问是需要评论系统的，但对于我这种只会一点点HTML和CSS的家伙来说，自己写是不可能的事情。于是就得借助第三方，前前后后试了5家，Gitment、Disqus、来必力、畅言、Valine。最后决定先用着Valine。这里简单谈谈各个评论系统的优劣以及重点说说Valine的设置方法。
                 </p>
             </article>
@@ -189,6 +191,25 @@
                 <img src="jQuery_1.png" width="100%">
                 <p>我相信肯定不止我一个在加上这段代码后发现还是行不通。</p>
                 <p>其实这段代码是需要jQuery的，在这段代码前再加一个script标签引入jQuery就行了。（不会JS的下场）</p>
+            </article>
+
+            <article class="background_white" id="readCount">
+                <h2>页面访问量统计</h2>
+                <p>根据官方文档，重要的参数有三个</p>
+                <ul>
+                    <li><code>class</code>为<code>leancloud_visitors</code>的父元素</li>
+                    <li>这个父元素的<code>id</code>作为数据库的查询条件，<code>id</code>为要查询页面的路径，比如当前这个页面的路径就是<code>/aboutWebsite/skillTree/commentSystems/commentSystems.html</code>
+                    </li>
+                    <li><code>class</code>为<code>leancloud-visitors-count</code>的子元素将被填充，填充值为从数据库获得的访问量值</li>
+                </ul>
+                <p>举个栗子</p>
+                <pre class="language-HTML line-numbers">
+<code>&lt;span class="leancloud_visitors" id="/aboutWebsite/skillTree/commentSystems/commentSystems.html"&gt;
+    &lt;strong&gt;阅读量：&lt;/strong&gt;
+    &lt;strong class="leancloud-visitors-count"&gt;&lt;/strong&gt;
+&lt;/span&gt;</code>
+                </pre>
+                <p>上面的代码可以放在任何地方，显示的都是commentSystems.html这个页面的阅读量</p>
             </article>
 
             <div class="background_white" id="comments">
