--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -42,20 +42,8 @@
                             <p>GitHub Pages纯HTML+CSS重建</p>
                         </li>
                         <li>
-                            <h1>2020.01.24</h1>
-                            <p>SSR使用教程-1.0上线</p>
-                        </li>
-                        <li>
-                            <h1>2020.01.26</h1>
-                            <p>OneNote教程-1.0上线</p>
-                        </li>
-                        <li>
                             <h1>2020.01.27</h1>
                             <p>阿里云放弃WordPress，改用BT+Nginx移植GitHub Pages</p>
-                        </li>
-                        <li>
-                            <h1>2020.01.28</h1>
-                            <p>Homepage、开发日志页、留言板上线</p>
                         </li>
                         <li>
                             <h1>2020.01.29</h1>
@@ -86,12 +74,26 @@
 
                     <div class="log">
                         <h1>2020.1.29</h1>
-                        <p>评论系统真的太难了，整了4家，从Disqus、来必力、畅言再到最后决定下来的Valine，前两个国内被墙，畅言非要注册才能评论，就只有Valine勉强能用。</p>
+                        <p>评论系统真的太难了，整了5家，从Gitment、Disqus、来必力、畅言再到最后决定下来的Valine，前两个国内被墙，畅言非要注册才能评论，就只有Valine勉强能用。</p>
                         <p>但是Valine这个评论部署起来是真麻烦啊，debug一下午，才把评论通知的邮件系统搞明白，最后那个页面定位的bug还是靠猜，引入了jQuery才蒙对搞定的。</p>
                         <p>不会JS还是硬伤，休息一会就去学JS。</p>
                         <p>嗯，就玩一小会。（真香警告）</p>
                     </div>
                     <div id="dividingLine"></div>
+
+                    <div id="logEnd">
+                        <h1>2020.2.10</h1>
+                        <p>有一阵子没更新开发日志了，虽然确实摸了几天鱼，但也是干了一些活儿，只是有点懒得总结前几天干了些啥。（今天来总结）</p>
+                        <ul>
+                            <li>首先一个重大更新就是增加了移动端的CSS适配，除了homepage页和教程目录页，其余页面的移动端CSS算是大改了，整体工作完成于2.8。</li>
+                            <li>然后就是微调了Valine的一些CSS，研究了下这个系统提供的文章阅读量统计功能，弄倒是弄出来了，只不过考虑到那惨不忍睹的页面阅读量，想了想还是别显示了。</li>
+                            <li>最后把Valine系统的简单教程写完了，主要还是给自己作参考用的，方便以后改动时有个参照。</li>
+                        </ul>
+                        <p style="margin-top: 0.7rem;">JS方面，Head
+                            First读了八成，感觉这一本不如这个系列的HTML和CSS书，也有可能是JS本来就是个系统性的编程语言，按照Head
+                            First的学习路子走的话学到的东西太零散，估计还是得老老实实啃大部头的JavaScript高级程序设计。</p>
+                        <p>不过也快开学了（网上授课），预计等Head First读完，SoraPage第二阶段的开发就宣告结束，等暑假再进行第三阶段JS+PHP+SQL的学习，ファイト！</p>
+                    </div>
                 </div>
             </div>
         </div>
