--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>SoraPage-开发日志</title>
     <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="developmentLog.css" />
+    <link type="text/css" rel="stylesheet" href="developmentLog.css?time=2020.2.10" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
