评论系统页Ver-1.2 解决移动端code溢出

--- a/aboutWebsite/skillTree/commentSystems/commentSystems.html
+++ b/aboutWebsite/skillTree/commentSystems/commentSystems.html
@@ -198,7 +198,9 @@
                 <p>根据官方文档，重要的参数有三个</p>
                 <ul>
                     <li><code>class</code>为<code>leancloud_visitors</code>的父元素</li>
-                    <li>这个父元素的<code>id</code>作为数据库的查询条件，<code>id</code>为要查询页面的路径，比如当前这个页面的路径就是<code>/aboutWebsite/skillTree/commentSystems/commentSystems.html</code>
+                    <li>这个父元素的<code>id</code>作为数据库的查询条件，<code>id</code>为要查询页面的路径，比如当前这个页面的路径就是
+                        <pre
+                            style="overflow:auto;"><code>/aboutWebsite/skillTree/commentSystems/commentSystems.html</code></pre>
                     </li>
                     <li><code>class</code>为<code>leancloud-visitors-count</code>的子元素将被填充，填充值为从数据库获得的访问量值</li>
                 </ul>
