开发日志更新 & 第二阶段开发结束

--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -81,7 +81,7 @@
                     </div>
                     <div id="dividingLine"></div>
 
-                    <div id="logEnd">
+                    <div id="log">
                         <h1>2020.2.10</h1>
                         <p>有一阵子没更新开发日志了，虽然确实摸了几天鱼，但也是干了一些活儿，只是有点懒得总结前几天干了些啥。（今天来总结）</p>
                         <ul>
@@ -93,6 +93,18 @@
                             First读了八成，感觉这一本不如这个系列的HTML和CSS书，也有可能是JS本来就是个系统性的编程语言，按照Head
                             First的学习路子走的话学到的东西太零散，估计还是得老老实实啃大部头的JavaScript高级程序设计。</p>
                         <p>不过也快开学了（网上授课），预计等Head First读完，SoraPage第二阶段的开发就宣告结束，等暑假再进行第三阶段JS+PHP+SQL的学习，ファイト！</p>
+                    </div>
+                    <div id="dividingLine"></div>
+
+                    <div id="logEnd">
+                        <h1>2020.2.17</h1>
+                        <p>记录下当前的一些信息</p>
+                        <ul>
+                            <li>JS学习方面：HeadFirst在几天前算是翻完了。这几天把JavaScript高级程序设计啃到了第8章（212/749），看的两章都很难理解，一个难点是对象的原型prototype，另一个是的函数的闭包closure，对于没有算法和数据结构基础、没有其他编程语言的背景知识的菜鸡本人而言，前前后后看了快10遍才勉强理解个大概。</li>
+                            <li>网站访问方面，从接入Google Analytics算起，所有页面浏览量5533，总计34人到访，共10条评论。</li>
+                            <li>网站页面方面：12个html页面，7个css文件，总计代码量1790+539=2329行，总计页面字数量10355个</li>
+                        </ul>
+                        <p>到今天为止，第二阶段的开发算是圆满结束，目前是打算等第三阶段写出JS后再公开网站。接下来就该重心转移了，GPA+N2+TOEFL。所以在暑假之前预计也不会有大的更新了。开学快落！</p>
                     </div>
                 </div>
             </div>
