--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoraPage-留言板</title>
-    <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css" />
+    <link rel="icon" href="/wholeSite/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/wholeSite/fixedHeader.css" />
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <style>
         html,
         body {
@@ -63,11 +64,6 @@
             line-height: 2;
             color: rgb(25, 25, 25);
         }
-
-        .vtime,
-        ::placeholder {
-            color: rgb(90, 90, 90) !important;
-        }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
@@ -97,6 +93,7 @@
             <p><strong>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</strong></p>
             <p><strong>PS：大家在评论的时候就不要带上任何个人信息啦~（包括绰号）</strong></p>
             <!--评论系统-->
+            <!-- Valine -->
             <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
             <div id="vcomments"></div>
             <script>
@@ -106,10 +103,10 @@
                     appKey: 'mgKE70GqsKmROxG4KalTmgVF',
                     visitor: true,
                     meta: ['nick', 'mail'],
-                    placeholder: "你就忍心啥都不说就溜？"
+                    placeholder: "你忍心啥都不说就溜？"
                 })
             </script>
-            <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-2.0.2.min.js"></script>
+            <!-- 邮件链接跳转 -->
             <script>
                 if (window.location.hash) {
                     var checkExist = setInterval(function () {
@@ -120,6 +117,22 @@
                     }, 100);
                 }
             </script>
+            <!-- 魔改 -->
+            <script src='/wholeSite/valineModify.js'></script>
+            <style>
+                .vtime,
+                ::placeholder {
+                    color: rgb(90, 90, 90) !important;
+                }
+
+                .vsubmit:disabled {
+                    color: rgb(170, 170, 170);
+                }
+
+                .vquote {
+                    border-left: none !important;
+                }
+            </style>
             <!--评论系统完-->
         </div>
     </div>
