--- a/tutorial/dictionary/dictionary.html
+++ b/tutorial/dictionary/dictionary.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css">
     <link type="text/css" rel="stylesheet" href="../../wholeSite/tutorialLayout.css">
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <title>SoraPage</title>
     <style>
         ul {
@@ -112,6 +113,7 @@
             <div id="comments">
                 <h1 style="margin-bottom: 3%;">评论区</h1>
                 <!--评论系统-->
+                <!-- Valine -->
                 <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
                 <div id="vcomments"></div>
                 <script>
@@ -120,10 +122,11 @@
                         appId: 'cCE8pXKvbUCFj5JuT7hic3q6-gzGzoHsz',
                         appKey: 'mgKE70GqsKmROxG4KalTmgVF',
                         visitor: true,
-                        meta: ['nick', 'mail']
+                        meta: ['nick', 'mail'],
+                        placeholder: "Comment Here~"
                     })
                 </script>
-                <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-2.0.2.min.js"></script>
+                <!-- 邮件链接跳转 -->
                 <script>
                     if (window.location.hash) {
                         var checkExist = setInterval(function () {
@@ -134,6 +137,22 @@
                         }, 100);
                     }
                 </script>
+                <!-- 魔改 -->
+                <script src='/wholeSite/valineModify.js'></script>
+                <style>
+                    .vtime,
+                    ::placeholder {
+                        color: rgb(90, 90, 90) !important;
+                    }
+
+                    .vsubmit:disabled {
+                        color: rgb(170, 170, 170);
+                    }
+
+                    .vquote {
+                        border-left: none !important;
+                    }
+                </style>
                 <!--评论系统完-->
             </div>
         </div>
