--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <title>SoraPage-留言板</title>
     <link rel="icon" href="/wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="/wholeSite/fixedHeader.css" />
@@ -14,18 +14,26 @@
             height: 100%;
         }
 
-        @media screen and (min-device-width: 701px) {
-            #background img {
-                position: fixed;
-                z-index: -2;
-                top: 42px;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                opacity: 0.9;
-            }
+        #background img,
+        #backgroundM img{
+            position: fixed;
+            z-index: -2;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0.9;
+        }
 
+
+        #allContents {
+            background-color: rgba(240, 240, 240, 0.7);
+            border-radius: 25px;
+            line-height: 2;
+            color: rgb(25, 25, 25);
+        }
+
+        @media screen and (min-device-width: 701px) {
             #backgroundM {
                 display: none;
             }
@@ -34,6 +42,10 @@
                 margin: 60px 10% 0 10%;
                 padding: 1% 20px 0 20px;
             }
+
+            #background img{
+                top: 43px;
+            }
         }
 
         @media screen and (max-device-width: 700px) {
@@ -41,28 +53,13 @@
                 display: none;
             }
 
-            #backgroundM img {
-                position: fixed;
-                z-index: -2;
-                top: 30px;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                opacity: 0.9;
-            }
-
             #allContents {
                 margin: 45px 5% 0 5%;
                 padding: 1% 20px 0 20px;
             }
-        }
-
-        #allContents {
-            background-color: rgba(240, 240, 240, 0.7);
-            border-radius: 25px;
-            line-height: 2;
-            color: rgb(25, 25, 25);
+            #backgroundM img{
+                top: 33px;
+            }
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
