--- a/aboutWebsite/skillTree/webhook/webhook.html
+++ b/aboutWebsite/skillTree/webhook/webhook.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <link rel="icon" href="../../../wholeSite/icon.png" type="image/x-icon">
     <title>SoraPage-WebHook</title>
     <link type="text/css" rel="stylesheet" href="../../../wholeSite/fixedHeader.css" />
