--- a/tutorial/dictionary/dictionary.html
+++ b/tutorial/dictionary/dictionary.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <link rel="icon" href="" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css">
     <link type="text/css" rel="stylesheet" href="../../wholeSite/tutorialLayout.css">
